<resources>
    <string name="app_name">NavGation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_signout">Sign Out</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="on_mode">ON MODE</string>
    <string name="off_mode">OFF MODE</string>
    <string name="sleep_mode">SLEEP MODE</string>
    <string name="intensity">INTENSITY: </string>
    <string name="speed">SPEED: </string>
    <string name="state">DEVICE STATE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_condition">HomeCondition</string>
</resources>
